--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  border: 2px solid green;
+}
+
+span {
+  background-color: lightblue;
 }
 
 @media (prefers-reduced-motion: no-preference) {
